# gestionaleveicoli

./: .gitignore  OTTIMIZZAZIONI-PERFORMANCE.md  README-BUILD-WINDOWS.md  piano.md
.github/workflows/: build-windows.yml
gestionale-veicoli-app/: dichiarazione_dissequestro.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
gestionale-veicoli-app/scripts/: create-admin.mjs
gestionale-veicoli-app/src/: App.css  App.tsx  index.css
gestionale-veicoli-app/src-tauri/: Cargo.toml  tauri.conf.json
gestionale-veicoli-app/src-tauri/capabilities/: allow-print.json
gestionale-veicoli-app/src-tauri/icons/: icon.icns
gestionale-veicoli-app/src-tauri/src/: main.rs
gestionale-veicoli-app/src/components/: ConfirmDialog.tsx  Toast.tsx
gestionale-veicoli-app/src/components/admin/: AdminUsersPanel.tsx
gestionale-veicoli-app/src/components/auth/: LoginForm.tsx
gestionale-veicoli-app/src/features/cases/: CaseDetail.tsx  CaseForm.tsx  CaseList.tsx  CasesPage.tsx  api.ts  caseCategories.ts  mappers.ts  printReleaseDocument.ts  printReportDocument.ts  printWithIframe.ts  types.ts
gestionale-veicoli-app/src/features/cases/components/: CaseBoard.tsx  (+4 more)
gestionale-veicoli-app/src/features/offices/: OfficesPage.tsx
gestionale-veicoli-app/src/lib/: supabaseClient.ts
supabase/: schema.sql
supabase/migrations/: 2025-01-XX-add-case-locks.sql  2025-01-XX-add-internal-number-unique-constraint.sql  2025-01-XX-add-performance-indexes.sql  2025-01-XX-disable-rls.sql  2025-01-XX-make-case-number-optional.sql  2025-11-13-add-destination-offices.sql
